--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 	</head>
 	<body>
 			<img id="logo" src="images/logo.png" alt="logo">
+			<section>
+				<h5 class="section-title">Ecard of the Day</h5>
+				<div class="ecard">
+					<img src="images/ecard-nycstartups.jpg" alt="ecard nycstartups">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+						eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+						ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+						aliquip ex ea commodo consequat. Duis aute irure dolor in
+						reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+						pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+						culpa qui officia deserunt mollit anim id est laborum.
+						<a href="#">download</a>
+					</p>
 
-
-
+				</div>
+			</section>
 	</body>
 </html>
