Make section mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
     	<meta charset="utf-8">
     	<meta name="description" content="The best in ecards">
     	<meta name="keywords" content="Ecards, comedy, gifts">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Ecard.ly | The Best in Ecards</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 			<img id="logo" src="images/logo.png" alt="logo">
+
 			<section>
 				<h5 class="section-title">Ecard of the Day</h5>
 				<div class="ecard">
-					<img src="images/ecard-nycstartups.jpg" alt="ecard nycstartups">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-						eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-						ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-						aliquip ex ea commodo consequat. Duis aute irure dolor in
-						reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-						pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-						culpa qui officia deserunt mollit anim id est laborum.
-						<a href="#">download</a>
-					</p>
+
+					<div class="ecard-image">
+						<img src="images/ecard-nycstartups.jpg" alt="ecard nycstartups">
+					</div>
+
+					<div class="ecard-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+							ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+							aliquip ex ea commodo consequat. Duis aute irure dolor in
+							reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+							pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+							culpa qui officia deserunt mollit anim id est laborum.
+							<a href="#">download</a>
+						</p>
+					</div>
 
 				</div>
 			</section>
+
 	</body>
 </html>
